# gstreamer-channelchange-testapp

./: CMakeLists.txt  LICENSE  README.md  gst_sample_app.c  gst_sample_app.h
cmake/: FindGStreamer.cmake
